--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.10.3",
     "gatsby-plugin-image": "^2.10.1",
     "gatsby-plugin-manifest": "^4.10.2",
@@ -24,6 +25,7 @@
     "gatsby-source-filesystem": "^4.10.1",
     "gatsby-transformer-sharp": "^4.10.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.1",
     "sass": "^1.49.9"
   }
