--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-sitemap": "^5.10.2",
     "gatsby-source-filesystem": "^4.10.1",
     "gatsby-transformer-sharp": "^4.10.0",
+    "gsap": "^3.9.1",
     "react": "^17.0.1",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.1",
